Remove small caps from silent persona

--- a/src/epub/text/electra.xhtml
+++ b/src/epub/text/electra.xhtml
@@ -12,7 +12,7 @@
 					<tr>
 						<td/>
 						<td>
-							<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Aged Servant</b> with <b epub:type="z3998:persona">Orestes</b> and <b epub:type="z3998:persona">Pylades</b>.</i>
+							<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Aged Servant</b> with <b epub:type="z3998:persona">Orestes</b> and Pylades.</i>
 						</td>
 					</tr>
 					<tr>
@@ -4857,7 +4857,7 @@
 					<tr>
 						<td/>
 						<td>
-							<i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">Orestes</b> and <b epub:type="z3998:persona">Pylades</b>.</i>
+							<i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">Orestes</b> and Pylades.</i>
 						</td>
 					</tr>
 					<tr>
