[Editorial] shewn --> shown

--- a/src/epub/text/electra.xhtml
+++ b/src/epub/text/electra.xhtml
@@ -2405,7 +2405,7 @@
 							<p>
 								<span>Where, O Zeus, are thy bolts, O Sun-god, where is thy ray,</span>
 								<br/>
-								<span>If with thy lightning, thy light, these things be not shewn to the day?</span>
+								<span>If with thy lightning, thy light, these things be not shown to the day?</span>
 							</p>
 						</td>
 					</tr>
