--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -13,7 +13,7 @@
 					<p>Inachus, the river god, was the legendary founder of Argos, whither his daughter Io, changed by the jealous Hera into a cow, was driven in her wanderings. <a href="electra.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-2" epub:type="endnote">
-					<p>Apollo <em>Lukeios</em>, the god of light, but by folk-etymology connected with <i xml:lang="grc">λύκος</i>, wolf. <a href="electra.xhtml#noteref-2" epub:type="backlink">↩</a></p>
+					<p>Apollo <i xml:lang="grc-Latn">Lukeios</i>, the god of light, but by folk-etymology connected with <i xml:lang="grc">λύκος</i>, wolf. <a href="electra.xhtml#noteref-2" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-3" epub:type="endnote">
 					<p>The full meaning is “to cut off the hands and feet and suspend them to the armpits.” This was done to prevent the victim from taking vengeance. <a href="electra.xhtml#noteref-3" epub:type="backlink">↩</a></p>
