--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -19,7 +19,7 @@
 					<p>The full meaning is “to cut off the hands and feet and suspend them to the armpits.” This was done to prevent the victim from taking vengeance. <a href="electra.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
-					<p>The charioteer of Oenomaus. In the race for the hand of Hippodameia, the king’s daughter, he betrayed his master by removing a linch-pin. Pelops won the race, but afterwards for an insult offered to his wife, he hurled into the sea Myrtilus, who invoked a dying curse on the house. <a href="electra.xhtml#noteref-4" epub:type="backlink">↩</a></p>
+					<p>The charioteer of Oenomaus. In the race for the hand of Hippodameia, the king’s daughter, he betrayed his master by removing a linchpin. Pelops won the race, but afterwards for an insult offered to his wife, he hurled into the sea Myrtilus, who invoked a dying curse on the house. <a href="electra.xhtml#noteref-4" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-5" epub:type="endnote">
 					<p>Amphiaraus. Induced by his wife Eriphyle to join the expedition of Polyneices against Argos, he was swallowed up by an earthquake. His son (like Orestes) avenged his father and Amphiaraus was honoured as an earth-god. <a href="electra.xhtml#noteref-5" epub:type="backlink">↩</a></p>
