[Editorial] Correct hyphenation of several words

--- a/src/epub/text/electra.xhtml
+++ b/src/epub/text/electra.xhtml
@@ -4343,7 +4343,7 @@
 							<p>
 								<span>Nay, by Queen Artemis the virgin maid,</span>
 								<br/>
-								<span>Of women-folk I ne’er will be afraid,</span>
+								<span>Of womenfolk I ne’er will be afraid,</span>
 								<br/>
 								<span>Those stay-at-homes, mere cumberers of the ground,</span>
 							</p>
