Fix typo in Dramatis Personae
IA scans reference: https://archive.org/details/sophocleswitheng02soph/page/125/mode/1up

--- a/src/epub/text/dramatis-personae.xhtml
+++ b/src/epub/text/dramatis-personae.xhtml
@@ -25,7 +25,7 @@
 					<p>Aegisthus, cousin of Agamemnon, sometime paramour of Clytemnestra and now prince consort</p>
 				</li>
 				<li>
-					<p>Chorus or Mycenean women</p>
+					<p>Chorus of Mycenean women</p>
 				</li>
 			</ul>
 			<p>Scene: At Mycenae before the Palace of Agamemnon.</p>
