--- a/src/epub/text/electra.xhtml
+++ b/src/epub/text/electra.xhtml
@@ -5559,7 +5559,7 @@
 						<td epub:type="z3998:persona">Orestes</td>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>“Tis not for thee to order; go within;</span>
+								<span>“ ’Tis not for thee to order; go within;</span>
 								<br/>
 								<span>Where thou didst slay my father thou must die.</span>
 							</p>
